--- a/FilesSafeReserve/FilesSafeReserve/Components/Layout/MainLayout.razor.css
+++ b/FilesSafeReserve/FilesSafeReserve/Components/Layout/MainLayout.razor.css
@@ -8,12 +8,18 @@ main {
     flex: 1;
 }
 
+.repo-ref{
+    color: white;
+}
+
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background: rgb(2,0,36);
+    background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(6,6,79,1) 55%, rgba(3,42,76,1) 100%);
 }
 
 .top-row {
-    background-color: #f7f7f7;
+    background: rgb(11,2,47);
+    background: linear-gradient(180deg, rgba(11,2,47,1) 0%, rgba(17,12,35,1) 100%);
     border-bottom: 1px solid #d6d5d5;
     justify-content: flex-end;
     height: 3.5rem;
