--- a/FilesSafeReserve/FilesSafeReserve/Components/Layout/NavMenu.razor
+++ b/FilesSafeReserve/FilesSafeReserve/Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">FilesSafeReserve</a>
+        <a class="navbar-brand" href="">Files Safe Reserve</a>
     </div>
 </div>
 
@@ -10,17 +10,22 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+                <i class="bi bi-house-fill item-icon" aria-hidden="true" /> Home
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="SafesListPage" Match="NavLinkMatch.All">
+                <i class="bi bi-safe-fill item-icon" aria-hidden="true" /> Safes List
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+            <NavLink class="nav-link" href="SmartphonePage">
+                <i class="bi bi-phone item-icon" aria-hidden="true" /> Smartphone
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="SettingsPage">
+                <i class="bi bi-gear-fill item-icon" aria-hidden="true" /> Settings
             </NavLink>
         </div>
     </nav>
