FSR-002: Created page of the list of virtual safes
General changes
* Created pages CreateSafePage and SafeDetailsPage
* Added fields to VirtualSafeModel: CreatedTimestamp, LastUpdatedTimestamp and LastReservationTimestamp
* Created SafesListViewModel for SafesListPage
* Updated MauiProgram to add IVirtualSafeRepo as Singleton
* Updated pages URLs: SafesListPage, CreateSafePage and SafeDetailsPage
* Updated SafesListPage

Changes in SafesListPage
* Added list of virtual safes
* Added buttons for each of virtual safe to go to SafeDetailsPage
* Added button to go to CreateSafePage
* Added alert message output if there are no virtual safes
* Added alert message output if virtual safe directory does not exist

--- a/FilesSafeReserve/FilesSafeReserve/Components/Layout/NavMenu.razor
+++ b/FilesSafeReserve/FilesSafeReserve/Components/Layout/NavMenu.razor
@@ -14,7 +14,7 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="SafesListPage" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="virtual-safes" Match="NavLinkMatch.All">
                 <i class="bi bi-safe-fill item-icon" aria-hidden="true" /> Safes List
             </NavLink>
         </div>
