--- a/FilesSafeReserve/FilesSafeReserve/Components/Pages/SafesListPage/SafesListPage.razor.css
+++ b/FilesSafeReserve/FilesSafeReserve/Components/Pages/SafesListPage/SafesListPage.razor.css
@@ -1,1 +1,80 @@
-﻿
+﻿.main-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.main-container h3 {
+    margin-bottom: 20px;
+    background: linear-gradient(90deg, #08c5d7, #2778d2, #6d27d2);
+    background-size: 600% 600%;
+    animation: GradientAnim 20s ease infinite;
+    color: white;
+    border-radius: 10px;
+    padding: 10px 10px 10px 10px;
+    width: fit-content;
+}
+
+.list-container {
+    background: linear-gradient(90deg, #08c5d7, #2778d2, #6d27d2);
+    background-size: 600% 600%;
+    animation: GradientAnim 20s ease infinite;
+    width: 100%;
+    border-radius: 10px;
+    overflow: hidden;
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.item-container {
+    background-color: ghostwhite;
+    border-radius: 10px;
+    margin: 10px;
+    padding: 10px;
+    text-align: left;
+
+}
+
+.name-part {
+    background: linear-gradient(90deg, #08c5d7, #2778d2, #6d27d2);
+    background-size: 600% 600%;
+    animation: GradientAnim 20s ease infinite;
+    font-size: large;
+    color: white;
+    border-radius: 10px;
+    padding: 10px 10px 10px 10px;
+    margin-bottom: 20px;
+    width: fit-content;
+}
+
+.alert-container{
+    width: 90%;
+    margin: 20px;
+}
+
+.btn-create {
+    margin: 20px;
+}
+
+.btn-part {
+    margin: 0 auto;
+    display: block;
+}
+
+@keyframes GradientAnim {
+    0% {
+        background-position: 0% 49%
+    }
+
+    50% {
+        background-position: 100% 52%
+    }
+
+    100% {
+        background-position: 0% 49%
+    }
+}
