FSR-008: Created logging functionality
FilesSafeReserve Changes
* Created models: ModelBase, LogModel and LogOperationModel
* Updated model VirtualSafeModel
* Created repositories interfaces: IAddRepoBase, IDeleteByIdRepoBase, IDeleteRepoBase, IGetByIdRepoBase, IToListRepoBase and IUpdateRepoBase
* Created IRepositories: ILogOperationRepo and ILogRepo
* Updated IRepository IVirtualSafeRepo
* Created repositories: LogOperationRepo and LogRepo
* Updated repository VirtualSafeRepo
* Updated ClassDiagram.cd
* Deleted IService ILoggerService
* Deleted params entities: LogDeleteActionParams and LogTransferActionParams
* Deleted result entity LogActionResult

FilesSafeReserve.Tests Changes
* Updated factory TestFsrDbContextFactory
* Created factories: TestVirtualSafeFactory, TestLogFactory and TestLogOperationFactory
* Updated tests VirtualSafeRepoTests
* Created tests: LogRepoTests and LogOperationTests
* Updated ClassDiagram.cd

--- a/FilesSafeReserve/FilesSafeReserve/Components/Pages/SafesListPage/SafesListPage.razor
+++ b/FilesSafeReserve/FilesSafeReserve/Components/Pages/SafesListPage/SafesListPage.razor
@@ -51,6 +51,6 @@
 @code{
     protected override async void OnInitialized()
     {
-        ViewModel.VirtualSafes = await VirtualSafeRepo.GetAll();
+        ViewModel.VirtualSafes = await VirtualSafeRepo.ToListAsync();
     }
 }
