--- a/FilesSafeReserve/FilesSafeReserve/Components/Pages/SafeDetailsPage/SafeDetailsPage.razor.css
+++ b/FilesSafeReserve/FilesSafeReserve/Components/Pages/SafeDetailsPage/SafeDetailsPage.razor.css
@@ -1,1 +1,178 @@
-﻿
+﻿.main-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.header-container {
+    padding-top: 15px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 10px;
+    color: white;
+    margin-bottom: 20px;
+}
+
+.body-container {
+    width: 100%;
+    padding-top: 15px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.name-container {
+    padding-top: 15px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 10px;
+    background: white;
+}
+
+.virtual-safe-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    width: 100%;
+    margin-top: 20px;
+}
+
+.description-container {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    width: 100%;
+    padding-top: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
+    border-radius: 10px;
+    background: white;
+    margin-bottom: 20px;
+    color: black;
+}
+
+.timestamp-container {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    color: black;
+}
+
+.timestamp-item {
+    padding-top: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
+    border-radius: 10px;
+    background: white;
+    margin-bottom: 20px;
+    width: 100%;
+}
+
+.btns-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding-top: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 10px;
+    border-radius: 10px;
+    background: white;
+    margin-bottom: 20px
+}
+.btns-item {
+    margin: 10px;
+}
+
+.gradient-background {
+    background: linear-gradient(90deg, #08c5d7, #2778d2, #6d27d2);
+    background-size: 600% 600%;
+    animation: GradientAnim 20s ease infinite;
+}
+
+.items-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 10px;
+    border-radius: 10px;
+    background: white;
+    width: 100%;
+}
+
+.items-elements-container {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    width: 100%;
+}
+
+.items-item {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+    margin: 5px;
+    border-radius: 10px;
+    color: white;
+}
+
+.item-icon{
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+    .item-icon:hover {
+        transform: scale(1.1);
+    }
+
+    .item-icon:active {
+        transform: scale(0.9);
+    }
+
+.alert-container {
+    width: 90%;
+    margin: 20px;
+}
+
+.item-name {
+    cursor: default;
+}
+
+@media (max-width: 800px) {
+    .btns-container {
+        flex-direction: column;
+    }
+}
+
+@keyframes GradientAnim {
+    0% {
+        background-position: 0% 49%
+    }
+
+    50% {
+        background-position: 100% 52%
+    }
+
+    100% {
+        background-position: 0% 49%
+    }
+}
