--- a/FilesSafeReserve/FilesSafeReserve/Components/Pages/EditSafePage/EditSafePage.razor.css
+++ b/FilesSafeReserve/FilesSafeReserve/Components/Pages/EditSafePage/EditSafePage.razor.css
@@ -1,1 +1,79 @@
-﻿
+﻿.main-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+    .main-container h3 {
+        margin-bottom: 20px;
+        background: linear-gradient(90deg, #08c5d7, #2778d2, #6d27d2);
+        background-size: 600% 600%;
+        animation: GradientAnim 20s ease infinite;
+        color: white;
+        border-radius: 10px;
+        padding: 10px 10px 10px 10px;
+        width: fit-content;
+    }
+
+.edit-container {
+    background: linear-gradient(90deg, #08c5d7, #2778d2, #6d27d2);
+    background-size: 600% 600%;
+    animation: GradientAnim 20s ease infinite;
+    border-radius: 10px;
+    overflow: hidden;
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.input-container {
+    margin: 20px;
+    width: 90%;
+}
+
+.btns-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.btns-container-item {
+    margin: 20px;
+}
+
+.danger-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.messages-container {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+}
+
+.message-container {
+    display: flex;
+    flex-direction: row;
+}
+
+@keyframes GradientAnim {
+    0% {
+        background-position: 0% 49%
+    }
+
+    50% {
+        background-position: 100% 52%
+    }
+
+    100% {
+        background-position: 0% 49%
+    }
+}
